--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knightbot",
+  "name": "anonymousbot",
   "version": "1.0.0",
   "description": "WhatsApp Bot",
   "main": "index.js",
@@ -18,7 +18,7 @@
   "keywords": [
     "whatsapp-bot"
   ],
-  "author": "",
+  "author": "Chris_Emperor🪽",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
